Add schema package for defining DTOs
